--- a/myevents.html
+++ b/myevents.html
@@ -76,7 +76,7 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="index.html">Logout</a></li>
+            <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
           </ul>
         </li>
       </ul>
