add review content

--- a/addreview.html
+++ b/addreview.html
@@ -74,45 +74,53 @@
       </ul>
     </nav>
     <div id="layoutSidenav">
-      <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-          <div class="sb-sidenav-menu">
-            <div class="nav">
-              <a class="nav-link" href="dashboard.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-tachometer-alt"></i>
-                </div>
-                Dashboard
-              </a>
-              <a class="nav-link" href="myevents.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-list-ul"></i>
-                </div>
-                Manage My Events
-              </a>
-              <a class="nav-link" href="addEvent.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-plus-circle"></i>
-                </div>
-                Add Events
-              </a>
-              <a class="nav-link" href="calendar.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-calendar-alt"></i>
-                </div>
-                Event Calendar
-              </a>
-              <a class="nav-link" href="addreview.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-calendar-alt"></i>
-                </div>
-                Review Management
-              </a>
+        <div id="layoutSidenav_nav">
+          <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+            <div class="sb-sidenav-menu">
+              <div class="nav">
+                <a class="nav-link" href="dashboard.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-tachometer-alt"></i>
+                  </div>
+                  Dashboard
+                </a>
+                <a class="nav-link" href="myevents.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-list-ul"></i>
+                  </div>
+                  Manage My Events
+                </a>
+                <a class="nav-link" href="addEvent.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-plus-circle"></i>
+                  </div>
+                  Add Events
+                </a>
+                <a class="nav-link" href="calendar.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-calendar-alt"></i>
+                  </div>
+                  Event Calendar
+                </a>
+                <a class="nav-link" href="addreview.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-calendar-alt"></i>
+                  </div>
+                  Review Management
+                </a>
+              </div>
             </div>
-          </div>
-        </nav>
-      </div>
-    </div>
+          </nav>
+        </div>
+  
+        <div class="container mt-5">
+            <br>
+          <h2>Review Management</h2>
+          <div id="eventsCardContainer" class="row"></div>
+        </div>
+        </div>
+      
+  
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
