--- a/myevents.html
+++ b/myevents.html
@@ -110,6 +110,12 @@
                 </div>
                 Event Calendar
               </a>
+              <a class="nav-link" href="addreview.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-calendar-alt"></i>
+                </div>
+                Review Management
+              </a>
             </div>
           </div>
         </nav>
