--- a/addEvent.html
+++ b/addEvent.html
@@ -102,12 +102,21 @@
                 </div>
                 Event Calendar
               </a>
-              <a class="nav-link" href="addreview.html">
+              <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReviews" aria-expanded="false" aria-controls="collapseReviews">
                 <div class="sb-nav-link-icon">
-                  <i class="fas fa-calendar-alt"></i>
+                  <i class="fas fa-star"></i>
                 </div>
                 Review Management
+                <div class="sb-sidenav-collapse-arrow">
+                  <i class="fas fa-angle-down"></i>
+                </div>
               </a>
+              <div class="collapse" id="collapseReviews" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                <nav class="sb-sidenav-menu-nested nav">
+                  <a class="nav-link" href="addReview.html">Add Review</a>
+                  <a class="nav-link" href="viewReviews.html">View Reviews</a>
+                </nav>
+              </div>
             </div>
           </div>
         </nav>
