--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,10 @@
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- jQuery Library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -68,7 +72,7 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
+            <li><a class="dropdown-item" href="index.html">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -102,27 +106,22 @@
                 </div>
                 Event Calendar
               </a>
-              <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReviews" aria-expanded="false" aria-controls="collapseReviews">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-star"></i>
-                </div>
-                Review Management
-                <div class="sb-sidenav-collapse-arrow">
-                  <i class="fas fa-angle-down"></i>
-                </div>
-              </a>
-              <div class="collapse" id="collapseReviews" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                <nav class="sb-sidenav-menu-nested nav">
-                  <a class="nav-link" href="addReview.html">Add Review</a>
-                  <a class="nav-link" href="viewReviews.html">View Reviews</a>
-                </nav>
-              </div>
             </div>
           </div>
         </nav>
       </div>
+      <div id="layoutSidenav_content">
+        <main>
+          <div class="container mt-4">
+            <div class="row" id="latestEventsContainer">
+              <!-- Event cards will be dynamically inserted here -->
+            </div>
+          </div>
+        </main>
+      </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
@@ -138,6 +137,5 @@
       src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
       crossorigin="anonymous"
     ></script>
-    
   </body>
 </html>
