--- a/addreview.html
+++ b/addreview.html
@@ -36,6 +36,7 @@
           justify-content: space-between;  /* Ensure proper layout of content inside the card */
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           border-radius: 10px;
+          opacity: 1;
         }
       
         .card img {
@@ -210,12 +211,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="scripts.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
+   
     <script
       src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
       crossorigin="anonymous"
