calendar connected with endpoint

--- a/calendar.html
+++ b/calendar.html
@@ -195,7 +195,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         // Initialize the calendar
         $("#calendar").fullCalendar({
@@ -240,7 +240,7 @@
           },
         });
       });
-    </script>
+    </script> -->
 
     <script src="scripts.js"></script>
   </body>
