Add event booking

--- a/dashboard.html
+++ b/dashboard.html
@@ -102,6 +102,34 @@
                 </div>
                 Event Calendar
               </a>
+              <!-- New Booking Details Link -->
+              <a class="nav-link" href="booking_details.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-ticket-alt"></i>
+                </div>
+                Booking Details
+              </a>
+              <!-- Manage Bookings Link -->
+              <a class="nav-link" href="manage_bookings.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-book"></i>
+                </div>
+                Manage Bookings
+              </a>
+              <!-- Feedback Forum Link -->
+              <a class="nav-link" href="feedbackForum.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-comment-alt"></i>
+                </div>
+                Feedback Forum
+              </a>
+              <!-- manage_feedback Link -->
+              <a class="nav-link" href="manage_feedback.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-comment-alt"></i>
+                </div>
+                Manage Feedback
+              </a>
             </div>
           </div>
         </nav>
