--- a/booking_details.html
+++ b/booking_details.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Manage My Events - Event Manager</title>
+    <title>Book Event</title>
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
@@ -20,16 +20,8 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="sb-nav-fixed">
+  <body>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-      <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
-      <button
-        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
-        id="sidebarToggle"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-
       <!-- Navbar Brand-->
       <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
       <!-- Sidebar Toggle-->
@@ -124,58 +116,68 @@
                 </div>
                 Manage Bookings
               </a>
-              <!-- Feedback Forum Link -->
-              <a class="nav-link" href="feedbackForum.html">
+            <!-- Feedback Forum Link -->
+            <a class="nav-link" href="feedbackForum.html">
+                <div class="sb-nav-link-icon">
+                    <i class="fas fa-comment-alt"></i>
+                </div>
+                Feedback Forum
+                </a>
+                <!-- manage_feedback Link -->
+              <a class="nav-link" href="manage_feedback.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-comment-alt"></i>
                 </div>
-                Feedback Forum
+                Manage Feedback
               </a>
             </div>
           </div>
         </nav>
       </div>
-      <div id="layoutSidenav_content">
-        <main>
-          <div class="container-fluid px-4">
-            <h1 class="mt-4">Manage My Events</h1>
-            <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item active">
-                View, Edit, or Delete Events
-              </li>
-            </ol>
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th>Event Name</th>
-                  <th>Event Date</th>
-                  <th>Event Time</th>
-                  <th>Venue</th>
-                  <th>About the Event</th>
-                  <th>Special Notes</th>
-                  <th>Type</th>
-                  <th>Event Photo</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody id="eventsTableBody">
-                <!-- Events will be dynamically inserted here using JavaScript -->
-              </tbody>
-            </table>
+
+      <div class="container mt-5">
+        <h2>Book Event</h2>
+        <form id="bookingForm">
+          <div class="mb-3">
+            <label for="name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="name" required />
           </div>
-        </main>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="email" required />
+          </div>
+          <div class="mb-3">
+            <label for="event" class="form-label">Select Event</label>
+            <select id="event" class="form-select" required>
+              <option value="">Select an event...</option>
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="tickets" class="form-label">Number of Tickets</label>
+            <input type="number" class="form-control" id="tickets" required />
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label">Additional Message (Optional)</label>
+            <textarea
+              class="form-control"
+              id="message"
+              rows="2"
+              style="resize: none; height: 276px;"
+            ></textarea>
+          </div>
+          
+         
+          <button type="submit" class="btn btn-primary" id="bookEventButton">
+            Submit Booking
+          </button>
+        </form>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
