--- a/dashboard.html
+++ b/dashboard.html
@@ -22,6 +22,12 @@
 
     <!-- jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <style>
+       .card {
+          
+          opacity: 1;
+        }
+    </style>
 
   </head>
   <body class="sb-nav-fixed">
