--- a/addEvent.html
+++ b/addEvent.html
@@ -1,200 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Add Events</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
-      rel="stylesheet"
-    />
-    <link href="css/styles.css" rel="stylesheet" />
-    <script
-      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-      <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
-      <!-- Sidebar Toggle-->
-      <button
-        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
-        id="sidebarToggle"
-        href="#!"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-      <!-- Navbar Search-->
-      <form
-        class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
-      >
-        <div class="input-group">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="Search for..."
-            aria-label="Search for..."
-            aria-describedby="btnNavbarSearch"
-          />
-          <button class="btn btn-primary" id="btnNavbarSearch" type="button">
-            <i class="fas fa-search"></i>
-          </button>
-        </div>
-      </form>
-      <!-- Navbar-->
-      <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            id="navbarDropdown"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            ><i class="fas fa-user fa-fw"></i
-          ></a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="navbarDropdown"
-          >
-            <li><a class="dropdown-item" href="#!">Settings</a></li>
-            <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <div id="layoutSidenav">
-      <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-          <div class="sb-sidenav-menu">
-            <div class="nav">
-              <a class="nav-link" href="dashboard.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-tachometer-alt"></i>
-                </div>
-                Dashboard
-              </a>
-              <a class="nav-link" href="myevents.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-list-ul"></i>
-                </div>
-                Manage My Events
-              </a>
-              <a class="nav-link" href="addEvent.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-plus-circle"></i>
-                </div>
-                Add Events
-              </a>
-              <a class="nav-link" href="calendar.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-calendar-alt"></i>
-                </div>
-                Event Calendar
-              </a>
-              <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReviews" aria-expanded="false" aria-controls="collapseReviews">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-star"></i>
-                </div>
-                Review Management
-                <div class="sb-sidenav-collapse-arrow">
-                  <i class="fas fa-angle-down"></i>
-                </div>
-              </a>
-              <div class="collapse" id="collapseReviews" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                <nav class="sb-sidenav-menu-nested nav">
-                  <a class="nav-link" href="addReview.html">Add Review</a>
-                  <a class="nav-link" href="viewReviews.html">View Reviews</a>
-                </nav>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Add Events</title>
+  <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <!-- Navbar Brand-->
+    <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
+    <!-- Sidebar Toggle-->
+    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!">
+      <i class="fas fa-bars"></i>
+    </button>
+    <!-- Navbar Search-->
+    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+      <!-- <div class="input-group">
+        <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
+          aria-describedby="btnNavbarSearch" />
+        <button class="btn btn-primary" id="btnNavbarSearch" type="button">
+          <i class="fas fa-search"></i>
+        </button>
+      </div> -->
+    </form>
+    <!-- Navbar-->
+    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="#!">Settings</a></li>
+          <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+          <li>
+            <hr class="dropdown-divider" />
+          </li>
+          <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+  <div id="layoutSidenav">
+    <div id="layoutSidenav_nav">
+      <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+        <div class="sb-sidenav-menu">
+          <div class="nav">
+            <a class="nav-link" href="dashboard.html">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
               </div>
+              Dashboard
+            </a>
+            <a class="nav-link" href="myevents.html">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-list-ul"></i>
+              </div>
+              Manage My Events
+            </a>
+            <a class="nav-link" href="addEvent.html">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-plus-circle"></i>
+              </div>
+              Add Events
+            </a>
+            <a class="nav-link" href="calendar.html">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-calendar-alt"></i>
+              </div>
+              Event Calendar
+            </a>
+            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReviews"
+              aria-expanded="false" aria-controls="collapseReviews">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-star"></i>
+              </div>
+              Review Management
+              <div class="sb-sidenav-collapse-arrow">
+                <i class="fas fa-angle-down"></i>
+              </div>
+            </a>
+            <div class="collapse" id="collapseReviews" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+              <nav class="sb-sidenav-menu-nested nav">
+                <a class="nav-link" href="addReview.html">Add Review</a>
+                <a class="nav-link" href="viewReviews.html">View Reviews</a>
+              </nav>
             </div>
           </div>
-        </nav>
-      </div>
-
-      <div class="container mt-5">
-        <h2>Add Event</h2>
-        <form id="addEventForm">
-          <div class="mb-3">
-            <label for="eventName" class="form-label">Event Name</label>
-            <input type="text" class="form-control" id="eventName" required />
-          </div>
-          <div class="mb-3">
-            <label for="eventDate" class="form-label">Event Date</label>
-            <input type="date" class="form-control" id="eventDate" required />
-          </div>
-          <div class="mb-3">
-            <label for="eventTime" class="form-label">Event Time</label>
-            <input type="time" class="form-control" id="eventTime" required />
-          </div>
-          <div class="mb-3">
-            <label for="venue" class="form-label">Venue</label>
-            <input type="text" class="form-control" id="venue" required />
-          </div>
-          <div class="mb-3">
-            <label for="aboutEvent" class="form-label">About the Event</label>
-            <textarea
-              class="form-control"
-              id="aboutEvent"
-              rows="3"
-              required
-            ></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="specialNotes" class="form-label">Special Notes</label>
-            <textarea
-              class="form-control"
-              id="specialNotes"
-              rows="2"
-            ></textarea>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Type</label><br />
-            <input
-              type="radio"
-              name="eventType"
-              id="freeForAll"
-              value="Free for All"
-              checked
-            />
-            <label for="freeForAll">Free for All</label><br />
-            <input
-              type="radio"
-              name="eventType"
-              id="paidTickets"
-              value="Paid - Tickets"
-            />
-            <label for="paidTickets">Paid - Tickets</label>
-          </div>
-
-          <div class="mb-3">
-            <label for="eventPhoto" class="form-label"
-              >Event Notice Photo (optional)</label
-            >
-            <input type="file" class="form-control" id="eventPhoto" />
-          </div>
-
-          <button type="submit" class="btn btn-primary" id="addEventButton">
-            Add Event
-          </button>
-        </form>
-      </div>
+        </div>
+      </nav>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div class="container mt-5">
+      <h2>Add Event</h2>
+      <form id="addEventForm">
+        <div class="mb-3">
+          <label for="eventName" class="form-label">Event Name</label>
+          <input type="text" class="form-control" id="eventName" required />
+        </div>
+        <div class="mb-3">
+          <label for="eventDate" class="form-label">Event Date</label>
+          <input type="date" class="form-control" id="eventDate" required />
+        </div>
+        <div class="mb-3">
+          <label for="eventTime" class="form-label">Event Time</label>
+          <input type="time" class="form-control" id="eventTime" required />
+        </div>
+        <div class="mb-3">
+          <label for="venue" class="form-label">Venue</label>
+          <input type="text" class="form-control" id="venue" required />
+        </div>
+        <div class="mb-3">
+          <label for="aboutEvent" class="form-label">About the Event</label>
+          <textarea class="form-control" id="aboutEvent" rows="3" required></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="specialNotes" class="form-label">Special Notes</label>
+          <textarea class="form-control" id="specialNotes" rows="2"></textarea>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Type</label><br />
+          <input type="radio" name="eventType" id="freeForAll" value="Free for All" checked />
+          <label for="freeForAll">Free for All</label><br />
+          <input type="radio" name="eventType" id="paidTickets" value="Paid - Tickets" />
+          <label for="paidTickets">Paid - Tickets</label>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="mb-3">
+          <label for="eventPhoto" class="form-label">Event Notice Photo (optional)</label>
+          <input type="file" class="form-control" id="eventPhoto" />
+        </div>
 
-    <script src="scripts.js"></script>
-  </body>
+        <button type="submit" class="btn btn-primary" id="addEventButton">
+          Add Event
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="scripts.js"></script>
+</body>
+
 </html>
