--- a/myevents.html
+++ b/myevents.html
@@ -31,20 +31,20 @@
       </button>
 
       <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
+      <!-- <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a> -->
       <!-- Sidebar Toggle-->
-      <button
+      <!-- <button
         class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
         id="sidebarToggle"
         href="#!"
       >
         <i class="fas fa-bars"></i>
-      </button>
+      </button> -->
       <!-- Navbar Search-->
       <form
         class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
       >
-        <div class="input-group">
+        <!-- <div class="input-group">
           <input
             class="form-control"
             type="text"
@@ -55,7 +55,7 @@
           <button class="btn btn-primary" id="btnNavbarSearch" type="button">
             <i class="fas fa-search"></i>
           </button>
-        </div>
+        </div> -->
       </form>
       <!-- Navbar-->
       <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
