--- a/addreview.html
+++ b/addreview.html
@@ -227,13 +227,15 @@
             </div>
           </nav>
         </div>
-  
+        <div id="layoutSidenav_content">
         <div class="container mt-5">
             <br>
           <h2>Review Management</h2>
           <div id="eventsCardContainer" class="row"></div>
         </div>
         </div>
+        </div>
+        
       
   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
