--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Login - SB Admin</title>
+    <title>EventSync</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -39,7 +39,15 @@
         <a href="#!" class="brand-logo"
           ><i class="material-icons">insert_invitation</i>EventSync
         </a>
-        
+        <ul class="right hide-on-med-and-down">
+          <li>
+            <a href="sass.html"><i class="material-icons">search</i></a>
+          </li>
+
+          <li>
+            <a href="mobile.html"><i class="material-icons">more_vert</i></a>
+          </li>
+        </ul>
       </div>
     </nav>
 
@@ -121,11 +129,13 @@
         </footer>
       </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
+<script src="scripts.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts.js"></script>
+    
     <!-- Compiled and minified CSS -->
     <link
       rel="stylesheet"
