--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,11 @@
         font-size: 24px;
         margin-bottom: 20px;
       }
+      .card-body {
+  text-align: center;
+}
+
+
     </style>
   </head>
   <body class="sb-nav-fixed">
